--- a/2.md
+++ b/2.md
@@ -43,9 +43,9 @@
 
 
 
-## How much impact do doctors have?
+## Как измерить позитивный вклад врачей?
 
-Многие люди, желающие помогать другим, становятся врачами. Один из наших ранних читателей, доктор Грег Льюис, сделал именно так. «Я хочу изучать медицину из-за стремления помогать другим, — написал он в своем university application, - и поэтому я не могу упустить шанс посвятить карьеру чему-то стоящему».
+Многие люди, желающие помогать другим, становятся врачами. Один из наших ранних читателей, доктор Грег Льюис, сделал именно так. «Я хочу изучать медицину из-за стремления помогать другим, — написал он в своем мотивационном письме в университет, - и поэтому я не могу упустить шанс посвятить карьеру чему-то стоящему».
 
 Так что мы задались вопросом: сколько пользы на самом деле можно принести, став врачом? В 2012 году мы объединились с Грегом Льюисом, чтобы выяснить это, исследование готовится к публикации.
 
@@ -64,47 +64,53 @@ Source: <a href="https://openknowledge.worldbank.org/bitstream/handle/10986/7039
 
 ![DALYs compared to doctors](https://cdn.80000hours.org/wp-content/uploads/2017/03/80K_graph_Dalys-doctors_V1-01.jpg)[`DALYs per 100,000 people versus doctors per 100,000 people. We used WHO data from 2004. Line is the best fitting hyperbola determined by non-linear least square regression. Full explanation in this <a href="https://drive.google.com/file/d/0B2kbwTsBB1fwZThKLVEtME5idU0/view">paper</a>.`]
 
-Можно увидеть, значения DALY остаются практически неизменными, когда на 100 000 человек приходится более 150 врачей. После этого момента (которого достигли почти все развитые страны) дополнительные врачи, в среднем, мало что меняют.
+Можно увидеть, что значения DALY остаются практически неизменными, когда на 100 000 человек приходится более 150 врачей. После этого момента (которого достигли почти все развитые страны) дополнительные врачи, в среднем, мало что меняют.
 
-Поэтому, если вы станете врачом в богатой стране вроде США или Великобритании, вам, вероятно, удастся сделать больше, чем на многих других работах, и если вы будете исключительным врачом, вы принесёте даже большую польщу, но едва ли ваше влияние на мир будет поистине значительным.
+Поэтому, если вы станете врачом в богатой стране вроде США или Великобритании, вам, вероятно, удастся сделать больше, чем на многих других работах, и если вы будете выдающимся врачом, вы принесёте даже большую пользу, но едва ли ваше влияние на мир будет поистине значительным.
 
-In fact, in the <a href="/career-guide/anyone-make-a-difference/">next article</a>, we’ll show how almost any college graduate can do more to save lives than a typical doctor. And in the guide, we’ll cover many other examples of common but ineffective attempts to do good.
+На самом деле уже в <a href="/career-guide/anyone-make-a-difference/">следующей статье</a>, мы продемонстрируем, как практически любой выпускник колледжа может сделать для спасения жизней больше, чем обычный доктор. Кроме того, в этом руководстве мы поговорим о многих других примерах распространенных, но неэффективных способов делать добро.
 
-These findings motivated Greg to switch from clinical medicine into public health, for reasons we’ll explain over the rest of the guide.
+Эти открытия подтолкнули Грега к тому, что вместо клинической медицины он начал заниматься здравоохранением. Доводы, которые на это повлияли, мы разберем в этом руководстве.
 
-## Who were the highest-impact people in history?
+## Люди, которые больше остальных повлияли на мир - кто они?
 
-Despite this uninspiring statistic about how many lives a doctor saves, some doctors have had *much* more impact than this. Let’s look at some examples of the highest-impact careers in history, and see what we might learn from them. First, let’s turn to medical research.
+Данные о том, сколько людей спасают доктора, не назовешь вдохновляющими. Но некоторые врачи изменили мир гораздо сильнее. Давайте разберем несколько примеров профессиональных путей, которые больше всего повлияли на человечество за время его существования, и посмотрим, какие из этого мы сможем сделать выводы. Начнем с медицинских исследований.
 
-In 1968, while working in a refugee camp on the border of Bangladesh and Burma, Dr. David Nalin discovered a breakthrough treatment for patients suffering from diarrhea. He realised that giving patients water mixed with the right concentration of salt and sugar would rehydrate them at the same rate at which they lost water. This prevented death from dehydration much more cheaply than did the conventional treatment of using an intravenous drip.
+Доктор Давид Налин открыл способ лечения людей, страдающих от диареи, в 1968 году, когда он работал в лагере для беженцев на границе между Бангладеш и Мьянмой. Он обнаружил, что если поить пациентов водой, в которой в нужных пропорциях растворены сахар и соль, регидратация будет происходить с той же скоростью, что и потеря воды организмом. Этот спосбо предотвратить смерть от обезвоживания был гораздо более дешевым, чем обычное лечение внтуривенными капельницами.
 
-![Dr. Nalin helped to invent oral rehydration therapy](https://cdn.80000hours.org/wp-content/uploads/2016/06/1024px-Cholera_rehydration_nurses.jpg)[`Dr. Nalin helped to save millions of lives with a simple innovation: giving diarrhoea patients water mixed with salt and sugar.`]
+![Доктор Налин изобрел пероральную региратацию](https://cdn.80000hours.org/wp-content/uploads/2016/06/1024px-Cholera_rehydration_nurses.jpg)[`Доктор Налин помог спасти миллионы жизней, и способ сделать это был простым: давать пациентам с диареей воду с солью и сахаром.`]
 
-Since then, this astonishingly simple treatment has been used all over the world, and the annual rate of child deaths from diarrhea has plummeted from 5 million to 1.3 million. Researchers estimate that the therapy has saved about 50 million lives, mostly children’s.[^:`<blockquote><p>
+С тех пор этот очень простой способ лечения стал известен по всему миру, и количество детей, которое умирает в год от диареи, упало с 5 миллионов до 1,3 миллионов. По оценкам исследователей, этот способ лечения спас приблизительно 50 миллонов жизней, в основном детских:
+<blockquote><p>
  Since the adoption of this inexpensive and easily applied intervention, the worldwide mortality rate for children with acute infectious diarrhoea has plummeted from 5 million to about 1.3 million deaths per year. Over fifty million lives have been saved in the past 40 years by the implementation of ORT.
 </p></blockquote>
 <p>
-Source: Science Heroes. <a href="https://web.archive.org/web/20160304060242/http://scienceheroes.com/index.php?option=com_content&amp;view=article&amp;id=65&amp;Itemid=113">Archived link</a>, retrieved 4-March-2016.</p>
-<p>Very roughly, this means 50/40 = 1.25 million lives have been saved per year. So if Dr Nalin sped up the discovery by 5 months (just a guess), that means that (5/12)*1.25 = 0.52 million extra lives were saved by his actions. This is a highly approximate estimate and could easily be off by an order of magnitude. See more comments in the next footnote.`]
+Источник: Science Heroes. <a href="https://web.archive.org/web/20160304060242/http://scienceheroes.com/index.php?option=com_content&amp;view=article&amp;id=65&amp;Itemid=113">Сссылка на архив</a>, полученный 4 марта 2016 г.</p>
 
-If Dr. Nalin had not been around, someone else would, no doubt, have discovered this treatment eventually. However, even if we imagine that he sped up the roll-out of the treatment by only five months, his work alone would have saved about 500,000 lives. This is a very approximate estimate, but it makes his impact more than 100,000 times greater than that of an ordinary doctor:
+Грубо говоря, это помогло спасти в год 50/40 = 1,25 миллионов жизней. Если бы доктор Налин сделал свое открытие на 5 месяцев раньше, (5/12)&ast;1,25 = 0,52 миллионов - вот сколько еще людей он бы спас. Эти оценка очень приблизительна, на самом деле количество может отличаться на порядки в любую сторону. Пояснения ищите в сносках.
 
-![Lives saved by Dr. Nalin](https://cdn.80000hours.org/wp-content/uploads/2016/03/80K_doctorschart_V2S2.png)[``]
+Если бы доктор Налин занимался чем-то другим, кто-то другой наверняка изборел бы этот способ лечения. Но если мы предположим, что доктор Налин сделал это всего на 5 месяцев раньше, чем его гипотетический конкурент, уже только это помогло бы спасти около 500 000 людей, которые бы в другом случае погибли. По этим приблизительным расчетам влияние доктора Налина можно считать в 100 000 раз большим, чем у обычного доктора:
 
-But even just within medical research, Dr. Nalin is far from the most extreme example of a high-impact career. For example, one estimate puts Karl Landsteiner’s discovery of blood groups as saving tens of millions of lives.[^:`<blockquote><p>
+![Жизни, которые спас доктор Налин](https://cdn.80000hours.org/wp-content/uploads/2016/03/80K_doctorschart_V2S2.png)[`Жизни, которые спас доктор Налин`]
+
+Но даже если мы остаемся в рамках медицинских исследований, открытие доктора Налина еще не самый выдающийся пример работы, которая повлияла на всех. Открытие групп крови Карлом Ландштейнером помогло спасти десятки миллионов жизней по оценке Sciense Heroes. Если верить их данным, наибольшее влияние переливание крови начало оказывать с 1955 года. Если считать, что 2,7 процедур переливания крови приблизительно соответствовали 1 спасенной жизни, то только в США эта процедура спасает 4,5 миллионов человек в год. Это значит, что в год переливание крови спасало от смерти 1,5% населения страны. Чтобы получить общее количество, эту долю населения Северной Америки, Европы, Австралии, Новой Зеландии и некоторых стран Азии и Африки просуммировали. Оценка преувеличивает полезность переливаний крови в первые десятилетия, но вовсе не учитывает развивающиеся страны:
+<blockquote><p>
 Superman of Science Makes Landmark Discovery - Over 1 Billion Lives Saved So Far</p>
 <p>  Every source quoted an amazing number of transfusions and potential lives saved in countries and regions worldwide. High impact years began around 1955 and calculations are loosely based on 1 life saved per 2.7 units of blood transfused. In the USA alone an estimated 4.5 million lives are saved each year. From these data I determined that 1.5% of the population was saved annually by blood transfusions and I applied this percentage on population data from 1950-2008 for North America, Europe, Australia, New Zealand, and parts of Asia and Africa. This rate may inflate the effectiveness of transfusions in the early decades but excludes the developing world entirely.
 </p></blockquote>
 <p>
-Source: Science Heroes. <a href="https://web.archive.org/web/20160304060254/http://scienceheroes.com/index.php?option=com_content&amp;view=article&amp;id=128&amp;Itemid=137">Archived link</a>, retrieved 4-March-2016.</p>
-<p>If we assume a constant number of lives saved per year, then that’s about 10 million lives per year. If he sped up the discovery by two years, then that’s 20 million lives saved.</p>
-<p>This is a highly approximate estimate and could easily be off by an order of magnitude in either direction, and seem more likely to be too high than too low. We’re a bit sceptical of the Science Heroes figures. Moreover, our attempt at modelling the speed-up is very simple. Since most of the lives were saved in the modern era once a large number of people had medical care, it’s possible that speeding up the discovery wouldn’t have had much impact at all. On the other hand, the discovery of blood groups probably made other scientific advances possible, and we’re ignoring their impact. Nevertheless, the basic point stands: Landsteiner's impact was likely vastly greater than a typical doctor.`]
+Источник: Science Heroes. <a href="https://web.archive.org/web/20160304060254/http://scienceheroes.com/index.php?option=com_content&amp;view=article&amp;id=128&amp;Itemid=137">Сссылка на архив</a>, полученный 4 марта 2016 г.</p>
 
-![Lives saved by Dr. Landsteiner](https://cdn.80000hours.org/wp-content/uploads/2016/03/80K_doctorschart_V2S3.png)[``]
+Если считать, что каждый год этот метод спасал одинаковое количество людей, получится, что это приблизительно 10 миллионов человек в год. Если бы доктор Ландштейнер сделал открытие на два года раньше, он бы спас еще 20 миллионов человек.
 
-Leaving the medical field, <a href="/career-guide/high-impact-jobs/">later in the guide</a>, we’ll cover the story of a hugely impactful mathematician, Alan Turing, and bureaucrat, Viktor Zhdanov.
+Оценка очень приблизительная, в реальности числа могут различаться на порядки как в одну, так и в другую сторону. Вероятнее, что они завышены, чем занижены. Мы скептически относимся к подсчетам Science Heroes. К тому же, у нас есть простая модель увеличения степени влияния. Основная часть жизней была спасена в современную эпоху, только когда у большинства человечества появился доступ к медицине, поэтому не исключено, что ускорение открытия не оказало бы никакого серьезного влияния. С другой стороны, открытие групп крови наверняка стало основой для других научных прорывов - а их влияние мы в подсчетах игнорируем. Тем не менее, наш главный тезис верен: влияние Ландштейнера было гораздо большим, чем у обычного врача.
+This is a highly approximate estimate and could easily be off by an order of magnitude in either direction, and seem more likely to be too high than too low. We’re a bit sceptical of the Science Heroes figures. Moreover, our attempt at modelling the speed-up is very simple. Since most of the lives were saved in the modern era once a large number of people had medical care, it’s possible that speeding up the discovery wouldn’t have had much impact at all. On the other hand, the discovery of blood groups probably made other scientific advances possible, and we’re ignoring their impact. Nevertheless, the basic point stands: Landsteiner's impact was likely vastly greater than a typical doctor.
 
-Or, let’s think even more broadly. Roger Bacon and Galileo pioneered the scientific method, without which none of the discoveries we covered above would have been possible, along with other major technological breakthroughs like the Industrial Revolution. These individuals were able to do vastly more good than even outstanding medical practitioners.
+![Жизни, котрые спас доктор Ландштейнер](https://cdn.80000hours.org/wp-content/uploads/2016/03/80K_doctorschart_V2S3.png)[`Жизни, котрые спас доктор Ландштейнер`]
+
+<a href="/career-guide/high-impact-jobs/">Дальше в руководстве</a> мы переключимся с медицины на другие виды деятельности и расскажем вам о математике Алане Тьюринге и бюрократе Викторе Жданове.
+
+Хотя давайте мыслить еще шире. Роджер Бэкон и Галилей придумали научный метод исследования, без которого вообще не состоялось бы ни одно из открытий, о которых мы говорили, и были бы невозможны такие технологические достижения, как Великая индустриальная революция. Эти люди сделали куда больше добра, чем самые выдающиеся практикующие врачи.
 
 ### Неизвестный советский подполковник, который спас вам жизнь
 
