--- a/1.md
+++ b/1.md
@@ -60,7 +60,7 @@
 
 ## Что идёт не так
 
-Обычно, пытаясь выбрать работу своей мечты, люди перебирают в воображении несколько профессий и размышляют, будут ли они приносить им удовлетворение. Или же вспоминают, в каких случаях они чувствовали себя полностью реализованными, и решают, что для них является самым важным. 
+Пытаясь выбрать работу своей мечты, люди обычно перебирают в голове несколько профессий и размышляют, будут ли они приносить им удовлетворение. Или же вспоминают, в каких случаях они чувствовали себя полностью реализованными, и решают, что для них является самым важным. 
 
 ![](https://cdn.80000hours.org/wp-content/uploads/2016/03/xkcd-dream-job.png)[`<a href="https://xkcd.com/1346/" target="_blank"><center>xkcd</center></a>`]
 
