--- a/6.md
+++ b/6.md
@@ -228,24 +228,25 @@
 
 <a href="/articles/the-advocate/#whats-the-best-way-to-become-an-advocate" class="btn btn-default">Как стать пропагандистом</a>
 
-## Approach 3: Research
+## Approach 3: Исследования
 
-People often pan academics as Ivory Tower intellectuals whose writing has no impact. And we agree there are many problems with academia that mean researchers achieve less than they could. However, we still think research is often high impact, both within academia and outside.
+Люди часто воспринимают ученых, как неких оторванных от жизни интеллектуалов, сидящих в башнях из слоновой кости, чьи научные труды не приносят реальной пользы. И мы согласны, что в научном сообществе существет множество проблем с тем, что ученые достигают меньшего, чем могли бы. Тем не менее, мы продолжаем считать, что научные исследования могут приносить пользу, как внутри научного сообщества, так и вне его. 
 
-Along with advocates, many of the highest impact people in history have been researchers. Consider Alan Turing. He was a mathematician who developed code breaking machines that allowed the Allies to be far more effective against Nazi U-boats in WW2. Some historians estimate this enabled D-day to happen a year earlier than it would have otherwise.[^:`<p>This <a href="https://web.archive.org/web/20160613165137/http://www.bbc.co.uk/news/technology-18419691">BBC article</a> quotes a number of historians (archived link, retrieved 13-June-2016), concluding:</p>
-<blockquote><p>If Turing and his group had not weakened the U-boats' hold on the North Atlantic, the 1944 Allied invasion of Europe - the D-Day landings - could have been delayed, perhaps by about a year or even longer, since the North Atlantic was the route that ammunition, fuel, food and troops had to travel in order to reach Britain from America.</blockquote>`] Since WW2 resulted in 10 million deaths per year, Turing may have saved about 10 million lives.
+Наряду с активистами, многие из тех, кто изменил ход истории, были учеными. Возьмем, к примеру, Алана Тьюринга. Он был математиком, разработавшим машину для взлома шифров, которая позволила союзным войскам получить преимущество перед нацистскими подводными лодками во Второй мировой войне. Некоторые историки считают, что это на год приблизило день D (день высадки союзных войск в Европе (6 июня 1944 г.) — прим. пер.). [^:`<p>Эта <a href="https://web.archive.org/web/20160613165137/http://www.bbc.co.uk/news/technology-18419691">статья на BBC</a> приводит цитаты нескольких историков (ссылка из архива от 13 июня 2016), приходящих к выводу, что</p>
+<blockquote><p>Если бы Тьюринг со своей группой не ослабили подводные лодки, скрытые в Североатлантическом океане, втрожение союзников в 1944 - День D - мог бы быть отложен на год или даже больше, так как Североатлантический океан был путём поставки боеприпасов, топлива, провизии и войск в Британию из Америки.</blockquote>`] Учитывая, что Вторая мировая война уносила 10 миллионов жизней в год, Тьюринг, возможно, спас 10 миллионов людей.
  
-And he invented the computer.
+И он изобрел компьютер.
 
-![Alan Turing aged 16](https://cdn.80000hours.org/wp-content/uploads/2016/06/Alan_Turing_Aged_16.jpg)[`Turing was instrumental in developing the computer. Sadly he was prosecuted for being a homosexual, perhaps contributing to his suicide in 1954.`]
+![Алан Тьюринг в 16 лет](https://cdn.80000hours.org/wp-content/uploads/2016/06/Alan_Turing_Aged_16.jpg)[`Тьюринг сыграл важную роль в разработке компьютера. К сожалению, он был привлечен к ответственности за гомосексуализм, что, возможно, стало причиной его самоубийства в 1954 году.`]
 
-Turing’s example shows that research can both be theoretical and high impact. Much of his work concerned the abstract mathematics of computing, which wasn’t initially practically relevant, but became important over time.
 
-On the applied side, we saw lots of examples of high impact medical research <a href="/career-guide/how-much-difference-can-one-person-make/">earlier in this guide</a>.
+Пример Тьюринга показывает, что исследования могут быть как теоретическими, так и приносящими практическую пользу. Большая часть его работы касалась абстрактной математики вычислений, которая изначально не была актуальной для применения на практике, но со временем стала важной.
 
-Of course, not everyone will be an Alan Turing, and not every discovery gets adopted. Nevertheless, we think research *on average* is effective, and frequently better than working directly on a problem. Why?
+Если говорить о прикладной науке, мы рассматривали множество примеров того, как медицина меняла мир <a href="/career-guide/how-much-difference-can-one-person-make/">ранее в этом пособии</a>.
 
-First, when new ideas are discovered they can be spread incredibly cheaply, so it’s a way that a single career can change a field. Moreover, new ideas accumulate over time, so research contributes to a significant fraction of long-run progress.
+Конечно, не каждый из нас станет Аланом Тьюрингом, и не каждое открытие находит свое применение. Тем не менее, мы считаем, что *в среднем* научные исследования эффективны, и нередко исследователь может больше повлиять на проблему, чем тот, кто работает над ней непосредственно. Почему?
+
+Во-первых, когда появляются новые идеи, их распространение обходится невероятно дешево, и это тот способ, которым один специалист может изменить целую область.  Более того, новые идеи накапливаются со временем, так что наука вносит свой ценный вклад в долгосрочное развитие отрасли.
 
 However, only a relatively small fraction of people are engaged in research. Only 0.1% of the population are academics,[^:`<p><a href="https://web.archive.org/web/20160521141817/http://www.richardprice.io/post/12855561694/the-number-of-academics-and-graduate-students-in">The number of academics and graduate students in the world</a>`] and the proportion was much smaller throughout history. If a small number of people account for a large fraction of progress, then *on average* each person’s efforts are significant.
 
