--- a/6.md
+++ b/6.md
@@ -186,7 +186,7 @@
 
 Мы уже привели наиболее рекомендуемые благотворительные организации от GiveWell, <a href="http://www.givewell.org/charities/against-malaria-foundation">фонд борьбы с малярией</a> - одна из проверенных организаций. <a href="/articles/best-charity/">Узнай больше о действительно эффективных благотворительных организациях, которым ты можешь помочь</a>.
 
-## Approach 2: Пропаганда
+## Путь 2: Пропаганда
 
 Одной из альтернатив пожертвованиям является пропаганда - продвижение решений для актуальных мировых проблем. Возможность пропагандировать может так же стать целью построения карьеры во множестве различных областей, и может в них позволить влиять на мир даже сильнее, чем просто заработок ради пожертвований. 
 
@@ -228,7 +228,7 @@
 
 <a href="/articles/the-advocate/#whats-the-best-way-to-become-an-advocate" class="btn btn-default">Как стать пропагандистом</a>
 
-## Approach 3: Исследования
+## Путь 3: Исследования
 
 Люди часто воспринимают ученых, как неких оторванных от жизни интеллектуалов, сидящих в башнях из слоновой кости, чьи научные труды не приносят реальной пользы. И мы согласны, что в научном сообществе существет множество проблем с тем, что ученые достигают меньшего, чем могли бы. Тем не менее, мы продолжаем считать, что научные исследования могут приносить пользу, как внутри научного сообщества, так и вне его. 
 
