--- a/6.md
+++ b/6.md
@@ -248,19 +248,19 @@
 
 Во-первых, когда появляются новые идеи, их распространение обходится невероятно дешево, и это тот способ, которым один специалист может изменить целую область.  Более того, новые идеи накапливаются со временем, так что наука вносит свой ценный вклад в долгосрочное развитие отрасли.
 
-However, only a relatively small fraction of people are engaged in research. Only 0.1% of the population are academics,[^:`<p><a href="https://web.archive.org/web/20160521141817/http://www.richardprice.io/post/12855561694/the-number-of-academics-and-graduate-students-in">The number of academics and graduate students in the world</a>`] and the proportion was much smaller throughout history. If a small number of people account for a large fraction of progress, then *on average* each person’s efforts are significant.
+Однако исследованиями занимается лишь относительно небольшая часть людей. Всего 0.1% населения - ученые,[^:`<p><a href="https://web.archive.org/web/20160521141817/http://www.richardprice.io/post/12855561694/the-number-of-academics-and-graduate-students-in">Количество ученых и аспирантов в мире</a>`] и в прошлом их доля была еще меньше. Если небольшое количество людей может кардинально повлиять на прогресс, тогда *в среднем* усилия каждого ученого действительно важны.
 
-Second, this is exactly what we’d expect from economic theory. Most researchers don’t get rich, even if their discoveries are extremely valuable. Turing made no money from the discovery of the computer, whereas today it’s a multibillion dollar industry. This is because the benefits of research come a long time in the future, and can’t usually be protected by patents. This means there’s little commercial incentive to do research relative to its importance. So if you *do* care more about social impact than profit, then it’s a good opportunity.
+Во-вторых, это именно то, что мы ожидаем от экономической теории. Большинство исследователей не становятся богатыми, даже если их открытия чрезвычайно ценны. Тьюринг не заработал денег на разработке компьютера, тогда как сегодня это многомиллиардная индустрия. Это связано с тем, что выгода от исследований проявляется спустя долгое время и обычно уже не могут быть защищена патентами. Это означает, что существует мало коммерческих стимулов для проведения исследований относительно их важности. Так что если вы заботитесь больше о социальном воздействии, чем о прибыли, то это хорошая возможность.
 
-In fact, the more fundamental the research, the harder it is to commercialise, so, all else equal, we’d expect fundamental research to be more neglected than applied research, and therefore (all else equal) higher impact. On the other hand, applied issues can be more urgent – applied breakthroughs like the telescope can let us make fundamental breakthroughs faster – so it’s hard to say whether applied or fundamental research is more pressing on average.
+На самом деле, чем фундаментальнее исследование, тем труднее его монетизировать, поэтому, при прочих равных, мы ожидаем, что фундаментальными исследованиями будут пренебрегать сильнее, чем прикладными, и, следовательно, (при прочих равных) они имеют более высокую ценность. С другой стороны, прикладные проблемы могут быть более актуальными – прикладные достижения, такие как телескоп, могут позволить нам ускорить фундаментальные прорывы, поэтому трудно сказать, являются прикладные или фундаментальные исследования более актуальными в среднем.
 
-Like advocacy, research is especially promising when you’re a good fit, because the best researchers achieve much more than the median. Most papers only have 1 citation, whereas <a href="/2012/08/should-you-go-into-research-part-1/">the top 0.1% of papers have over 1,000 citations</a>. And when we did a <a href="/career-reviews/biomedical-research/">case study on biomedical research</a>, remarks like this were typical:
+Как и с пропагандой, исследования принесут наибольшую пользу, если вы хорошо подходите для этой работы, потому что лучшие исследователи достигают гораздо большего, чем средние. Большинство изданий получает только одну цитату, в то время как <a href="/2012/08/should-you-go-into-research-part-1/">только лучшие 0.1% изданий имеют более 1000 цитат</a>. И когда мы проводили <a href="/career-reviews/biomedical-research/">исследование биомедицинских научных работ</a>, типичными были подобные замечания:
 
-> One good person can cover the ground of five, and I’m not exaggerating.
+> Один хороший человек может заменить пятерых, и я не преувеличиваю.
 
-If you might be a top 10% researcher in a pressing problem area, then it’s likely to be the highest impact path for you.
+Если вы можете быть среди 10% лучших иисследователей в актуальной проблемной области, то это, вероятно, будет самый действенный путь изменения мира для вас. 
 
-![Remember Dr Nalin, who helped to invent oral rehydration therapy?](https://cdn.80000hours.org/wp-content/uploads/2016/06/1024px-Cholera_rehydration_nurses.jpg)[`As we saw earlier, Dr. Nalin helped to save millions of lives with a simple innovation: giving patients with diarrhoea water mixed with salt and sugar.`]
+![Помните доктора Налина, который помог изобрести оральную регидратационную терапию?](https://cdn.80000hours.org/wp-content/uploads/2016/06/1024px-Cholera_rehydration_nurses.jpg)[`Как мы видели ранее, доктор Налин помог спасти миллионы жизней с помощью простого нововведения, давая пациентам с диареей воду, смешанную с солью и сахаром.`]
 
 ### Which research areas are high impact?
 
