--- a/6.md
+++ b/6.md
@@ -250,15 +250,15 @@
 
 Однако исследованиями занимается лишь относительно небольшая часть людей. Всего 0.1% населения - ученые,[^:`<p><a href="https://web.archive.org/web/20160521141817/http://www.richardprice.io/post/12855561694/the-number-of-academics-and-graduate-students-in">Количество ученых и аспирантов в мире</a>`] и в прошлом их доля была еще меньше. Если небольшое количество людей может кардинально повлиять на прогресс, тогда *в среднем* усилия каждого ученого действительно важны.
 
-Во-вторых, это именно то, что мы ожидаем от экономической теории. Большинство исследователей не становятся богатыми, даже если их открытия чрезвычайно ценны. Тьюринг не заработал денег на разработке компьютера, тогда как сегодня это многомиллиардная индустрия. Это связано с тем, что выгода от исследований проявляется спустя долгое время и обычно уже не могут быть защищена патентами. Это означает, что существует мало коммерческих стимулов для проведения исследований относительно их важности. Так что если вы заботитесь больше о социальном воздействии, чем о прибыли, то это хорошая возможность.
+Во-вторых, это именно то, что мы ожидаем от экономической теории. Большинство исследователей не становятся богатыми, даже если их открытия чрезвычайно ценны. Тьюринг не заработал денег на разработке компьютера, тогда как сегодня это многомиллиардная индустрия. Это связано с тем, что выгода от исследований проявляется спустя долгое время, и обычно уже не могет быть защищена патентами. Это означает, что существует мало коммерческих стимулов для проведения наиболее важных исследований. Так что если ты заботишься больше о социальном воздействии, чем о прибыли, то это хорошая возможность.
 
 На самом деле, чем фундаментальнее исследование, тем труднее его монетизировать, поэтому, при прочих равных, мы ожидаем, что фундаментальными исследованиями будут пренебрегать сильнее, чем прикладными, и, следовательно, (при прочих равных) они имеют более высокую ценность. С другой стороны, прикладные проблемы могут быть более актуальными – прикладные достижения, такие как телескоп, могут позволить нам ускорить фундаментальные прорывы, поэтому трудно сказать, являются прикладные или фундаментальные исследования более актуальными в среднем.
 
-Как и с пропагандой, исследования принесут наибольшую пользу, если вы хорошо подходите для этой работы, потому что лучшие исследователи достигают гораздо большего, чем средние. Большинство изданий получает только одну цитату, в то время как <a href="/2012/08/should-you-go-into-research-part-1/">только лучшие 0.1% изданий имеют более 1000 цитат</a>. И когда мы проводили <a href="/career-reviews/biomedical-research/">исследование биомедицинских научных работ</a>, типичными были подобные замечания:
+Как и с пропагандой, исследования принесут наибольшую пользу, если ты хорошо подходишь для этой работы, потому что лучшие исследователи достигают гораздо большего, чем средние. Большинство изданий получает только одну цитату, в то время как <a href="/2012/08/should-you-go-into-research-part-1/">только лучшие 0.1% изданий имеют более 1000 цитат</a>. И когда мы проводили <a href="/career-reviews/biomedical-research/">исследование биомедицинских научных работ</a>, типичными были подобные замечания:
 
 > Один хороший человек может заменить пятерых, и я не преувеличиваю.
 
-Если вы можете быть среди 10% лучших иисследователей в актуальной проблемной области, то это, вероятно, будет самый действенный путь изменения мира для вас. 
+Если ты можешь быть среди 10% лучших иисследователей в актуальной проблемной области, то это, вероятно, будет самый действенный путь изменения мира для тебя. 
 
 ![Помните доктора Налина, который помог изобрести оральную регидратационную терапию?](https://cdn.80000hours.org/wp-content/uploads/2016/06/1024px-Cholera_rehydration_nurses.jpg)[`Как мы видели ранее, доктор Налин помог спасти миллионы жизней с помощью простого нововведения, давая пациентам с диареей воду, смешанную с солью и сахаром.`]
 
